Remove not needed flags